--- a/index.html
+++ b/index.html
@@ -37,10 +37,107 @@
               <li class="link">
                 <a href="">HOME</a>
                 <i class="fa-solid fa-chevron-down"></i>
+                <div class="dropdown-wrapper">
+                  <ul class="dropdown-menu">
+                    <li class="dropdown-link">
+                      <a href=""> HOME CLEAN </a>
+                    </li>
+                    <li class="dropdown-link">
+                      <a href=""> HOME COLLECTION </a>
+                    </li>
+                    <li class="dropdown-link">
+                      <a href=""> HOME MINIMAL </a>
+                    </li>
+                    <li class="dropdown-link">
+                      <a href=""> HOME MODERN </a>
+                    </li>
+                    <li class="dropdown-link">
+                      <a href=""> HOME STYLE </a>
+                    </li>
+                    <li class="dropdown-link">
+                      <a href=""> HOME UNIQUE </a>
+                    </li>
+                  </ul>
+                </div>
               </li>
-              <li class="link">
+              <li class="link shop-link">
                 <a href="">SHOP</a>
                 <i class="fa-solid fa-chevron-down"></i>
+                <div class="megamenu-wrapper">
+                  <div class="mega-left">
+                    <ul>
+                      <li class="mega-link">
+                        <h1>SHOP STYLE</h1>
+                      </li>
+                      <li class="mega-link">
+                        <a href=""> SHOP STANDART </a>
+                      </li>
+                      <li class="mega-link">
+                        <a href=""> SHOP FULL </a>
+                      </li>
+                      <li class="mega-link">
+                        <a href=""> SHOP ONLY CATEGORIES </a>
+                      </li>
+                      <li class="mega-link">
+                        <a href="">SHOP IMAGE CATEGORIES</a>
+                      </li>
+                      <li class="mega-link">
+                        <a href=""> SHOP SUB CATEGORIES</a>
+                      </li>
+                      <li><a href="">SHOP LIST</a></li>
+                    </ul>
+                  </div>
+                  <div class="mega-center">
+                    <ul>
+                     <li class="mega-link">
+                        <h1>SHOP STYLE</h1>
+                      </li>
+                      <li>
+                        <a href="">SHOP STANDART</a>
+                      </li>
+                      <li>
+                        <a href="">SHOP FULL</a>
+                      </li>
+                      <li>
+                        <a href=""> SHOP ONLY CATEGORIES </a>
+                      </li>
+                      <li>
+                        <a href=""> SHOP IMAGE CATEGORIES</a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="mega-right">
+                    <ul>
+                     <li class="mega-link">
+                        <h1>SHOP STYLE</h1>
+                      </li>
+                    <li>
+                      <a href="">SHOP STANDART</a>
+                    </li>
+                    <li>
+                      <a href="">SHOP FULL</a>
+                    </li>
+                    <li>
+                      <a href=""> SHOP ONLY CATEGORIES </a>
+                    </li>
+                    <li>
+                      <a href=""> SHOP IMAGE CATEGORIES</a>
+                    </li>
+                    <li>
+                      <a href="">SHOP STYLE</a>
+                    </li>
+                    <li>
+                      <a href="">SHOP STANDART</a>
+                    </li>
+                    </ul>
+                  </div>
+                  <div class="mega-img">
+                    <img src="https://ecommarcejs.netlify.app/img/mega-menu.jpg" alt="">
+                    <h1>Lorem, ipsum.</h1>
+                    <p class="subtitle">Lorem ipsum dolor sit.</p>
+                    <button class="btn">SHOP NOW</button>
+                  </div>
+                </div>
               </li>
               <li class="link">
                 <a href="">BLOG</a>
