mega menu added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
               </li>
               <li class="link shop-link">
-                <a href="">SHOP</a>
+                <a href="" class="shop">SHOP</a>
                 <i class="fa-solid fa-chevron-down"></i>
                 <div class="megamenu-wrapper">
                   <div class="mega-left">
@@ -89,7 +89,7 @@
                   </div>
                   <div class="mega-center">
                     <ul>
-                     <li class="mega-link">
+                      <li class="mega-link">
                         <h1>SHOP STYLE</h1>
                       </li>
                       <li>
@@ -108,31 +108,34 @@
                   </div>
                   <div class="mega-right">
                     <ul>
-                     <li class="mega-link">
+                      <li class="mega-link">
                         <h1>SHOP STYLE</h1>
                       </li>
-                    <li>
-                      <a href="">SHOP STANDART</a>
-                    </li>
-                    <li>
-                      <a href="">SHOP FULL</a>
-                    </li>
-                    <li>
-                      <a href=""> SHOP ONLY CATEGORIES </a>
-                    </li>
-                    <li>
-                      <a href=""> SHOP IMAGE CATEGORIES</a>
-                    </li>
-                    <li>
-                      <a href="">SHOP STYLE</a>
-                    </li>
-                    <li>
-                      <a href="">SHOP STANDART</a>
-                    </li>
+                      <li>
+                        <a href="">SHOP STANDART</a>
+                      </li>
+                      <li>
+                        <a href="">SHOP FULL</a>
+                      </li>
+                      <li>
+                        <a href=""> SHOP ONLY CATEGORIES </a>
+                      </li>
+                      <li>
+                        <a href=""> SHOP IMAGE CATEGORIES</a>
+                      </li>
+                      <li>
+                        <a href="">SHOP STYLE</a>
+                      </li>
+                      <li>
+                        <a href="">SHOP STANDART</a>
+                      </li>
                     </ul>
                   </div>
                   <div class="mega-img">
-                    <img src="https://ecommarcejs.netlify.app/img/mega-menu.jpg" alt="">
+                    <img
+                      src="https://ecommarcejs.netlify.app/img/mega-menu.jpg"
+                      alt=""
+                    />
                     <h1>Lorem, ipsum.</h1>
                     <p class="subtitle">Lorem ipsum dolor sit.</p>
                     <button class="btn">SHOP NOW</button>
