--- a/index.html
+++ b/index.html
@@ -169,5 +169,80 @@
         </div>
       </div>
     </header>
+   <div class="modal-overlay">
+     <div class="modal-search">
+      <div class="modal-wrapper">
+        <h1 class="title">Search for products</h1>
+        <p class="sub-title">
+          Start typing to see products you are looking for.
+        </p>
+        <span class="line"></span>
+        <form action="" class="form">
+          <input type="text" placeholder="Search a product" />
+          <button class="btn">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </form>
+        <div class="result-wrapper">
+          <h1>RESULTS FROM PRODUCT</h1>
+        </div>
+        <div class="cart">
+          <a href="">
+            <img
+              src="https://ecommarcejs.netlify.app/img/products/product1/1.png"
+              alt=""
+            />
+            <div class="cart-detail">
+              <h1>ANALOGUE RESIN STRAPT</h1>
+              <p class="code">SKU:PDU0001</p>
+              <p class="price">$108.00</p>
+            </div>
+          </a>
+          <a href="">
+            <img
+              src="https://ecommarcejs.netlify.app/img/products/product1/1.png"
+              alt=""
+            />
+            <div class="cart-detail">
+              <h1>ANALOGUE RESIN STRAPT</h1>
+              <p class="code">SKU:PDU0001</p>
+              <p class="price">$108.00</p>
+            </div>
+          </a>
+          <a href="">
+            <img
+              src="https://ecommarcejs.netlify.app/img/products/product1/1.png"
+              alt=""
+            />
+            <div class="cart-detail">
+              <h1>ANALOGUE RESIN STRAPT</h1>
+              <p class="code">SKU:PDU0001</p>
+              <p class="price">$108.00</p>
+            </div>
+          </a>
+          <a href="">
+            <img
+              src="https://ecommarcejs.netlify.app/img/products/product1/1.png"
+              alt=""
+            />
+            <div class="cart-detail">
+              <h1>ANALOGUE RESIN STRAPT</h1>
+              <p class="code">SKU:PDU0001</p>
+              <p class="price">$108.00</p>
+            </div>
+          </a>
+        </div>
+        <i class="fa-regular fa-circle-xmark circle"></i>
+      </div>
+      
+    </div>
+   </div>
+   <main>
+    <div class="container">
+      lskjh
+      <img src="https://ecommarcejs.netlify.app/img/products/product1/1.png" alt="">
+    </div>
+   </main>
+   
   </body>
 </html>
