--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./assets/style/css/main.css" />
   </head>
   <body>
+    <!-- header start -->
     <header>
       <div class="global-notification">
         <div class="container">
@@ -180,6 +181,8 @@
         </div>
       </div>
     </header>
+    <!-- header end -->
+    <!-- modal search start -->
     <div class="modal-overlay">
       <div class="modal-search">
         <div class="modal-wrapper">
@@ -247,33 +250,67 @@
         </div>
       </div>
     </div>
+    <!-- modal search end -->
 
-    <section class="section1">
-      <div class="slider">
-        <div class="slider-wrapper">
-          <div class="slider-item">
-            <div class="slider-img">
-              <img src="./assets/style/image/slider1.jpg" alt="" />
-              <div class="container">
-                <p class="subtitle">SUMMER 2023</p>
-                <h1>SAVE TO UP 70%</h1>
-                <button class="btns">Explore now</button>
-              </div>
+    <!-- slider start -->
+    <section class="slider">
+      <div class="slider-wrapper">
+        <div class="slider-item">
+          <div class="slider-img">
+            <img src="./assets/style/image/slider1.jpg" alt="" />
+            <div class="container">
+              <p class="subtitle">SUMMER 2023</p>
+              <h1>SAVE TO UP 70%</h1>
+              <button class="btns">Explore now</button>
             </div>
           </div>
-          <div class="slider-buttons">
-            <button class="left chevron">
-              <i class="fa-solid fa-chevron-left"></i>
-            </button>
-            <button class="right chevron">
-              <i class="fa-solid fa-chevron-right"></i>
-            </button>
+        </div>
+        <div class="slider-buttons">
+          <button class="left chevron">
+            <i class="fa-solid fa-chevron-left"></i>
+          </button>
+          <button class="right chevron">
+            <i class="fa-solid fa-chevron-right"></i>
+          </button>
+        </div>
+        <div class="slider-dots">
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+        </div>
+      </div>
+    </section>
+    <!-- slider end -->
+
+    <!-- category start -->
+    <section class="category">
+      <div class="container">
+        <div class="category-wrapper">
+          <div class="category-title">
+            <h1>ALL CATEGORIES</h1>
+            <p class="subtitle">Summer Collection New Morden Design</p>
           </div>
-          <div class="slider-dots">
-            <div class="dot"></div>
-             <div class="dot"></div>
-              <div class="dot"></div>
+          <div class="categories">
+            <div class="categorie-item">
+<div class="categorie-img"> </div>
+            </div>
+            <div class="categorie-item">
+<div class="categorie-img"> </div>
+            </div>
+            <div class="categorie-item">
+<div class="categorie-img"> </div>
+            </div>
+            <div class="categorie-item">
+<div class="categorie-img"> </div>
+            </div>
+            <div class="categorie-item">
+<div class="categorie-img"> </div>
+            </div>
+            <div class="categorie-item">
+<div class="categorie-img"> </div>
+            </div>
             
+
           </div>
         </div>
       </div>
