--- a/index.html
+++ b/index.html
@@ -292,25 +292,38 @@
           </div>
           <div class="categories">
             <div class="categorie-item">
-<div class="categorie-img"> </div>
+              <div class="categorie-img">
+                <img src="./assets/style/image/categories1.png" alt="">
+              <p class="subtitle">Smartphone</p>
+              </div>
             </div>
             <div class="categorie-item">
-<div class="categorie-img"> </div>
+              <div class="categorie-img">
+               <img src="./assets/style/image/categories2.png" alt="">
+              <p class="subtitle">Watches</p>
+              </div>
             </div>
             <div class="categorie-item">
-<div class="categorie-img"> </div>
+              <div class="categorie-img">
+                <img src="./assets/style/image/categories3.png" alt="">
+              <p class="subtitle">Electronics</p>
+              </div>
             </div>
             <div class="categorie-item">
-<div class="categorie-img"> </div>
+              <div class="categorie-img">
+                <img src="./assets/style/image/categories4.png" alt="">
+             <p class="subtitle">Furnitures</p> </div>
             </div>
             <div class="categorie-item">
-<div class="categorie-img"> </div>
+              <div class="categorie-img">
+                <img src="./assets/style/image/categories5.png" alt="">
+              <p class="subtitle">Collections</p>
+              </div>
             </div>
             <div class="categorie-item">
-<div class="categorie-img"> </div>
+              <div class="categorie-img"><img src="./assets/style/image/categories6.png" alt=""></div>
+            <p class="subtitle">Fashions</p>
             </div>
-            
-
           </div>
         </div>
       </div>
