product title added

--- a/index.html
+++ b/index.html
@@ -282,11 +282,10 @@
     </section>
     <!-- slider end -->
 
-    <!-- category start -->
-    <section class="category">
+    <!-- category,product start -->
+    <section class="category-products">
       <div class="container">
-        <div class="category-wrapper">
-          <div class="category-title">
+        <div class="title">
             <h1>ALL CATEGORIES</h1>
             <p class="subtitle">Summer Collection New Morden Design</p>
           </div>
@@ -325,8 +324,22 @@
             <p class="subtitle">Fashions</p>
             </div>
           </div>
-        </div>
-      </div>
+       <div class="title">
+            <h1>Featured Products</h1>
+            <p class="subtitle">Summer Collection New Morden Design</p>
+          </div>
+          <div class="products">
+            <ul class="product-item">
+              <li class="card">
+
+              </li>
+
+            </ul>
+          </div>
+      
+
     </section>
+    <!-- category,product end -->
+  
   </body>
 </html>
