responsive modal serach

--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
     </header>
     <!-- header end -->
     <!-- modal search start -->
-    <div class="modal-overlay">
+ 
+     <div class="modal-overlay">
       <div class="modal-search">
         <div class="modal-wrapper">
           <h1 class="title">Search for products</h1>
@@ -245,11 +246,54 @@
                 <p class="price">$108.00</p>
               </div>
             </a>
+            <a href="">
+              <img
+                src="https://ecommarcejs.netlify.app/img/products/product1/1.png"
+                alt=""
+              />
+              <div class="cart-detail">
+                <h1>ANALOGUE RESIN STRAPT</h1>
+                <p class="code">SKU:PDU0001</p>
+                <p class="price">$108.00</p>
+              </div>
+            </a><a href="">
+              <img
+                src="https://ecommarcejs.netlify.app/img/products/product1/1.png"
+                alt=""
+              />
+              <div class="cart-detail">
+                <h1>ANALOGUE RESIN STRAPT</h1>
+                <p class="code">SKU:PDU0001</p>
+                <p class="price">$108.00</p>
+              </div>
+            </a><a href="">
+              <img
+                src="https://ecommarcejs.netlify.app/img/products/product1/1.png"
+                alt=""
+              />
+              <div class="cart-detail">
+                <h1>ANALOGUE RESIN STRAPT</h1>
+                <p class="code">SKU:PDU0001</p>
+                <p class="price">$108.00</p>
+              </div>
+            </a>
+            <a href="">
+              <img
+                src="https://ecommarcejs.netlify.app/img/products/product1/1.png"
+                alt=""
+              />
+              <div class="cart-detail">
+                <h1>ANALOGUE RESIN STRAPT</h1>
+                <p class="code">SKU:PDU0001</p>
+                <p class="price">$108.00</p>
+              </div>
+            </a>
           </div>
           <i class="fa-regular fa-circle-xmark circle"></i>
         </div>
       </div>
     </div>
+  
     <!-- modal search end -->
 
     <!-- slider start -->
