--- a/index.html
+++ b/index.html
@@ -32,13 +32,16 @@
         </div>
       </div>
       <div class="container">
+        
         <div class="header-wrapper">
           <div class="responsive-menu">
             <i class="fa-solid fa-bars"></i>
           </div>
+          
           <div class="header-left">LOGO</div>
 
           <nav class="center">
+            <i class="fa-solid fa-chevron-left toggle"></i>
             <ul class="menu">
               <li class="link">
                 <a href="" class="main-menu"
