campania title added

--- a/index.html
+++ b/index.html
@@ -603,6 +603,17 @@
             <i class="fa-solid fa-chevron-right"></i>
           </button>
         </div>
+        <div class="title">
+            <h1>FEATURED PRODUCTS</h1>
+            <p class="subtitle">Summer Collection New Morden Design</p>
+          </div>
+
+          <div class="campania-wrapper">
+            <div class="campania-item1"></div>
+             <div class="campania-item"></div>
+              <div class="campania-item"></div>
+             <div class="campania-item1"></div>
+          </div>
           </div>
       
 
