--- a/index.html
+++ b/index.html
@@ -729,14 +729,12 @@
         </div>
       </div>
       <div class="discount-sticker">
-        <div class="detail">
-          <h1>New Season Sale</h1>
-          <p>40% OFF</p>
-          <span></span>
-          
-
-        </div>
-
+        <h1>New Season Sale</h1>
+        <p class="percent">40% OFF</p>
+        <div class="line"></div>
+        <button class="shop-btn">
+          Shop Now <i class="fa-solid fa-arrow-right"></i>
+        </button>
       </div>
       <div class="a"></div>
     </section>
