policy and footer up added

--- a/index.html
+++ b/index.html
@@ -736,7 +736,86 @@
           Shop Now <i class="fa-solid fa-arrow-right"></i>
         </button>
       </div>
-      <div class="a"></div>
+      <div class="policy">
+        <div class="container">
+          <ul class="policy-list">
+            <li class="policy-item">
+              <i class="fa-solid fa-truck"></i>
+              <div class="policy-text">
+                <strong>FREE DELIVERY</strong>
+                <span>From $99.99</span>
+              </div>
+            </li>
+            <li class="policy-item">
+              <i class="fa-solid fa-headphones-simple"></i>
+              <div class="policy-text">
+                <strong>SUPPORT 24/7</strong>
+                <span>Online 24 hours</span>
+              </div>
+            </li>
+            <li class="policy-item">
+              <i class="fa-solid fa-arrow-rotate-right"></i>
+              <div class="policy-text">
+                <strong>30 DAYS RETURN</strong>
+                <span>Simple return it within 30 days</span>
+              </div>
+            </li>
+            <li class="policy-item">
+              <i class="fa-regular fa-credit-card"></i>
+              <div class="policy-text">
+                <strong>PAYMENT METHOD</strong>
+                <span>Secure Payment</span>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <footer class="footer">
+        <div class="footer-up">
+          <div class="container">
+            <div class="footerUp-wrapper">
+              <div class="footerUp left ">
+                <div class="footerUp-top left-top">
+                  <div class="titles ">
+                    Get our emails for info on new items, sales and more.
+                  </div>
+                  <div class="subtitles">
+                    Well email you a voucher worth $10 off First order ower $50.
+                  </div>
+                </div>
+                <div class="footerUp-bottom left-bottom">
+                  <form action="">
+                    <input type="text" placeholder="Enter your adress" />
+                    <button class="subscribe">Subscribe</button>
+                  </form>
+                  <div class="subtitles">
+                    By subscribing you agree to our Terms & Conditions and
+                    Privacy & Cookies Policy.
+                  </div>
+                </div>
+              </div>
+              
+
+              <div class="footerUp right ">
+                <div class="footerUp-top right-top">
+                  <div class="titles-right">Need help?
+(+90) 123 456 789</div>
+                  <div class="subtitles">We are available 8:00am - 7:00pm/div>
+                </div>
+                <div class="footerUp-bottom right-bottom ">
+                  <div class="img">
+                    <img src="https://ecommarcejs.netlify.app/img/footer/app-store.png" class="app-store" alt="">
+                    <img src="https://ecommarcejs.netlify.app/img/footer/google-play.png" class="google-play" alt="">
+                  </div>
+                  <div class="subtitles">
+                   Shopping App: Try our Viev in Your Room feature, manage registies & save payment info.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
     </section>
     <!-- category,product end -->
   </body>
