footer center added

--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
                 <div class="footerUp-top right-top">
                   <div class="titles-right">Need help?
 (+90) 123 456 789</div>
-                  <div class="subtitles">We are available 8:00am - 7:00pm/div>
+                  <div class="subtitles">We are available 8:00am - 7:00pm
                 </div>
                 <div class="footerUp-bottom right-bottom ">
                   <div class="img">
@@ -815,6 +815,100 @@
             </div>
           </div>
         </div>
+        </div>
+        <div class="footer-center">
+          <div class="container">
+            <div class="footer-center-wrapper">
+              <div class="footer-center-left">
+                <div class="logo">
+                  LOGO
+                </div>
+                <div class="subtitle">
+                  Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis in termapol.
+                </div>
+                <div class="number">
+                  (+800) 1234 5678 90 - info@example.com
+                </div>
+              </div>
+              <div class="footer-center-right">
+               <ul class="information right">
+                <h1>Information</h1>
+                <li>About Us</li>
+                <li>
+                  Privacy Policy
+                </li>
+                <li>Returns Policy</li>
+                <li>Shipping Policy</li>
+                <li>Dropshipping</li>
+               </ul>
+               <ul class="account right">
+                <h1>
+                  Account
+                </h1>
+                <li>Dashboard</li>
+                <li>
+                  My Orders
+                </li>
+                <li>My Wishlist</li>
+                <li>Account details</li>
+                <li>Track My Orders</li>
+               </ul>
+               <ul class="shop right">
+                <h1>
+                  Shop
+                </h1>
+                <li>Affiliate</li>
+                <li>
+                  Bestsellers
+                </li>
+                <li>Discount</li>
+                <li>Latest Products</li>
+                <li>Sale Products</li>
+               </ul>
+               <ul class="Categories right">
+                 <h1>
+                  Categories
+                </h1>
+                <li>Women</li>
+                <li>
+                  Men
+                </li>
+                <li>Bags</li>
+                <li>Outerwear</li>
+                <li>Shoes</li>
+
+               </ul>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <!-- <div class="footer-down">
+          <div class="container">
+           <div class="footer-down-wrapper">
+             <div class="footer-down-left">
+              <div class="footer-down-top">
+  Copyright 2022 © E-CommerceJT Theme. All right reserved. Powered by Veysel Gazi Duran
+              </div>
+              <div class="footer-down-bottom">
+                <img src="https://ecommarcejs.netlify.app/img/footer/cards.png" alt="">
+              
+
+
+              </div>
+
+            </div>
+          <div class="footer-down-right">
+            <ul class="footer-policy">
+              <li>Privacy Policy</li>
+              <li>Terms and Conditions</li>
+              <li>Returns Policy</li>
+
+            </ul>
+          </div>
+           </div>
+          </div>
+        </div> -->
       </footer>
     </section>
     <!-- category,product end -->
