footer-down added

--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@
             </div>
           </div>
         </div>
-        <!-- <div class="footer-down">
+        <div class="footer-down">
           <div class="container">
            <div class="footer-down-wrapper">
              <div class="footer-down-left">
@@ -908,7 +908,7 @@
           </div>
            </div>
           </div>
-        </div> -->
+        </div>
       </footer>
     </section>
     <!-- category,product end -->
