shop page added '

--- a/shop.html
+++ b/shop.html
@@ -73,7 +73,7 @@
                 </div>
               </li>
               <li class="link shop-link">
-                <a href="shop.html" class="main-menu"
+                <a href="" class="main-menu"
                   >SHOP
                   <i class="fa-solid fa-chevron-down"></i>
                 </a>
@@ -298,36 +298,6 @@
     </div>
 
     <!-- modal search end -->
-
-    <!-- slider start -->
-    <section class="slider">
-      <div class="slider-wrapper">
-        <div class="slider-item">
-          <div class="slider-img">
-            <img src="./assets/style/image/slider1.jpg" alt="" />
-            <div class="container">
-              <p class="subtitle">SUMMER 2023</p>
-              <h1>SAVE TO UP 70%</h1>
-              <button class="btns">Explore now</button>
-            </div>
-          </div>
-        </div>
-        <div class="slider-buttons">
-          <button class="left chevron">
-            <i class="fa-solid fa-chevron-left"></i>
-          </button>
-          <button class="right chevron">
-            <i class="fa-solid fa-chevron-right"></i>
-          </button>
-        </div>
-        <div class="slider-dots">
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-        </div>
-      </div>
-    </section>
-    <!-- slider end -->
 
     <!-- category,product start -->
     <section class="category-products">
@@ -609,124 +579,8 @@
               <i class="fa-solid fa-chevron-right"></i>
             </button>
           </div>
-          <div class="title">
-            <h1>FEATURED PRODUCTS</h1>
-            <p class="subtitle">Summer Collection New Morden Design</p>
-          </div>
-
-          <div class="campania-wrapper">
-            <div class="campania-first">
-              <div class="campania-item">
-                <h1>Fashion Month Ready in Capital Shop</h1>
-                <p class="subtitle">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </p>
-                <button class="campaign-click">View All</button>
-              </div>
-              <div class="campania-item">
-                <h1>Fashion Month Ready in Capital Shop</h1>
-                <p class="subtitle">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </p>
-                <button class="campaign-click">View All</button>
-              </div>
-            </div>
-          </div>
-          <div class="campania-wrapper">
-            <div class="campania-second">
-              <div class="campania-item">
-                <h1>Fashion Month Ready in Capital Shop</h1>
-                <p class="subtitle">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </p>
-                <button class="campaign-click">View All1</button>
-              </div>
-              <div class="campania-item">
-                <h1>Fashion Month Ready in Capital Shop</h1>
-                <p class="subtitle">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </p>
-                <button class="campaign-click">View All2</button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="title">
-          <h1>Blog Products</h1>
-          <p class="subtitle">Summer Collection New Morden Design</p>
-        </div>
-        <div class="blogs">
-          <div class="blog">
-            <div class="blog-img">
-              <img
-                src="https://ecommarcejs.netlify.app/img/blogs/blog1.jpg"
-                alt=""
-              />
-            </div>
-            <div class="blog-detail">
-              <p class="date">25 Feb, 2023 - 0 Comments</p>
-              <p class="subtitle">Aliquam hendrerit mi metus</p>
-              <span class="more"><a href="">Read More</a></span>
-            </div>
-          </div>
-          <div class="blog">
-            <div class="blog-img">
-              <img
-                src="https://ecommarcejs.netlify.app/img/blogs/blog2.jpg"
-                alt=""
-              />
-            </div>
-            <div class="blog-detail">
-              <p class="date">25 Feb, 2023 - 0 Comments</p>
-              <p class="subtitle">Aliquam hendrerit mi metus</p>
-              <span class="more"><a href="">Read More</a></span>
-            </div>
-          </div>
-          <div class="blog">
-            <div class="blog-img">
-              <img
-                src="https://ecommarcejs.netlify.app/img/blogs/blog3.jpg"
-                alt=""
-              />
-            </div>
-            <div class="blog-detail">
-              <p class="date">25 Feb, 2023 - 0 Comments</p>
-              <p class="subtitle">Aliquam hendrerit mi metus</p>
-              <span class="more"><a href="">Read More</a></span>
-            </div>
-          </div>
-        </div>
-        <div class="brands">
-          <div class="brand">
-            <img
-              src="https://ecommarcejs.netlify.app/img/brands/brand1.png"
-              alt=""
-            />
-          </div>
-          <div class="brand">
-            <img
-              src="https://ecommarcejs.netlify.app/img/brands/brand2.png"
-              alt=""
-            />
-          </div>
-          <div class="brand">
-            <img
-              src="https://ecommarcejs.netlify.app/img/brands/brand3.png"
-              alt=""
-            />
-          </div>
-          <div class="brand">
-            <img
-              src="https://ecommarcejs.netlify.app/img/brands/brand4.png"
-              alt=""
-            />
-          </div>
-          <div class="brand">
-            <img
-              src="https://ecommarcejs.netlify.app/img/brands/brand5.png"
-              alt=""
-            />
-          </div>
+         
+          
         </div>
       </div>
       <div class="discount-sticker">
