--- a/blog.html
+++ b/blog.html
@@ -38,8 +38,7 @@
             <i class="fa-solid fa-bars"></i>
           </div>
 
-          <div class="header-left"><a href="">LOGO</a></div>
-
+          <div class="header-left"><a href="index.html">LOGO</a></div>
           <nav class="center">
             <i class="fa-solid fa-chevron-left toggle"></i>
             <ul class="menu">
@@ -158,7 +157,7 @@
                 </div>
               </li>
               <li class="link">
-                <a href="blog.html">BLOG</a>
+                <a href="">BLOG</a>
               </li>
               <li class="link">
                 <a href="">CONTACT</a>
@@ -299,358 +298,9 @@
 
     <!-- modal search end -->
 
-    <!-- slider start -->
-    <section class="slider">
-      <div class="slider-wrapper">
-        <div class="slider-item">
-          <div class="slider-img">
-            <img src="./assets/style/image/slider1.jpg" alt="" />
-            <div class="container">
-              <p class="subtitle">SUMMER 2023</p>
-              <h1>SAVE TO UP 70%</h1>
-              <button class="btns">Explore now</button>
-            </div>
-          </div>
-        </div>
-        <div class="slider-buttons">
-          <button class="left chevron">
-            <i class="fa-solid fa-chevron-left"></i>
-          </button>
-          <button class="right chevron">
-            <i class="fa-solid fa-chevron-right"></i>
-          </button>
-        </div>
-        <div class="slider-dots">
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-        </div>
-      </div>
-    </section>
-    <!-- slider end -->
-
     <!-- category,product start -->
     <section class="category-products">
       <div class="container">
-        <div class="title">
-          <h1>ALL CATEGORIES</h1>
-          <p class="subtitle">Summer Collection New Morden Design</p>
-        </div>
-        <div class="categories">
-          <div class="categorie-item">
-            <div class="categorie-img">
-              <img src="./assets/style/image/categories1.png" alt="" />
-              <p class="subtitle">Smartphone</p>
-            </div>
-          </div>
-          <div class="categorie-item">
-            <div class="categorie-img">
-              <img src="./assets/style/image/categories2.png" alt="" />
-              <p class="subtitle">Watches</p>
-            </div>
-          </div>
-          <div class="categorie-item">
-            <div class="categorie-img">
-              <img src="./assets/style/image/categories3.png" alt="" />
-              <p class="subtitle">Electronics</p>
-            </div>
-          </div>
-          <div class="categorie-item">
-            <div class="categorie-img">
-              <img src="./assets/style/image/categories4.png" alt="" />
-              <p class="subtitle">Furnitures</p>
-            </div>
-          </div>
-          <div class="categorie-item">
-            <div class="categorie-img">
-              <img src="./assets/style/image/categories5.png" alt="" />
-              <p class="subtitle">Collections</p>
-            </div>
-          </div>
-          <div class="categorie-item">
-            <div class="categorie-img">
-              <img src="./assets/style/image/categories6.png" alt="" />
-            </div>
-            <p class="subtitle">Fashions</p>
-          </div>
-        </div>
-        <div class="title">
-          <h1>Featured Products</h1>
-          <p class="subtitle">Summer Collection New Morden Design</p>
-        </div>
-        <div class="products">
-          <ul class="product">
-            <li class="card">
-              <div class="image">
-                <img src="./assets/style/image/3p.png" class="img" alt="" />
-                <img src="./assets/style/image/4p.png" class="img2" alt="" />
-              </div>
-              <div class="card-detail">
-                <h1>Ridley High Waist</h1>
-                <ul class="stars">
-                  <li class="star">
-                    <i class="fa-solid fa-star"></i>
-                  </li>
-                  <li class="star">
-                    <i class="fa-solid fa-star"></i>
-                  </li>
-                  <li class="star">
-                    <i class="fa-solid fa-star"></i>
-                  </li>
-                  <li class="star">
-                    <i class="fa-solid fa-star"></i>
-                  </li>
-                  <li class="star">
-                    <i class="fa-regular fa-star-half-stroke"></i>
-                  </li>
-                </ul>
-                <div class="price">
-                  <strong class="discount">$124.00</strong>
-                  <s class="primary-price">$185.00</s>
-                </div>
-              </div>
-              <div class="percent">-33%</div>
-              <ul class="card-elements">
-                <li class="elements">
-                  <button class="basket element">
-                    <i class="fa-solid fa-basket-shopping"></i>
-                  </button>
-                </li>
-                <li class="elements">
-                  <button class="favorite element">
-                    <i class="fa-regular fa-heart"></i>
-                  </button>
-                </li>
-                <li class="elements">
-                  <a href="" class="detail">
-                    <button class="element">
-                      <i class="fa-solid fa-eye"></i>
-                    </button>
-                  </a>
-                </li>
-                <li class="elements">
-                  <button class="share element">
-                    <i class="fa-solid fa-share-nodes"></i>
-                  </button>
-                </li>
-              </ul>
-            </li>
-            <li class="card">
-              <div class="image">
-                <img src="./assets/style/image/1p.png" class="img" alt="" />
-                <img src="./assets/style/image/2p.png" class="img2" alt="" />
-              </div>
-              <div class="card-detail">
-                <h1>Analogue Resin Strap</h1>
-                <ul class="stars">
-                  <li class="star">
-                    <i class="fa-solid fa-star"></i>
-                  </li>
-                  <li class="star">
-                    <i class="fa-solid fa-star"></i>
-                  </li>
-                  <li class="star">
-                    <i class="fa-solid fa-star"></i>
-                  </li>
-                  <li class="star">
-                    <i class="fa-solid fa-star"></i>
-                  </li>
-                  <li class="star">
-                    <i class="fa-regular fa-star-half-stroke"></i>
-                  </li>
-                </ul>
-                <div class="price">
-                  <strong class="discount">$108.00</strong>
-                  <s class="primary-price">$165.00</s>
-                </div>
-              </div>
-              <div class="percent">-22%</div>
-              <ul class="card-elements">
-                <li class="elements">
-                  <button class="basket element">
-                    <i class="fa-solid fa-basket-shopping"></i>
-                  </button>
-                </li>
-                <li class="elements">
-                  <button class="favorite element">
-                    <i class="fa-regular fa-heart"></i>
-                  </button>
-                </li>
-                <li class="elements">
-                  <a href="" class="detail">
-                    <button class="element">
-                      <i class="fa-solid fa-eye"></i>
-                    </button>
-                  </a>
-                </li>
-                <li class="elements">
-                  <button class="share element">
-                    <i class="fa-solid fa-share-nodes"></i>
-                  </button>
-                </li>
-              </ul>
-            </li>
-            <li class="card">
-              <div class="image">
-                <img src="./assets/style/image/5p.png" class="img" alt="" />
-                <img src="./assets/style/image/6p.png" class="img2" alt="" />
-              </div>
-              <div class="card-detail">
-                <h1>La Boheme</h1>
-                <ul class="stars">
-                  <li class="star">
-                    <i class="fa-solid fa-star"></i>
-                  </li>
-                  <li class="star">
-                    <i class="fa-solid fa-star"></i>
-                  </li>
-                  <li class="star">
-                    <i class="fa-solid fa-star"></i>
-                  </li>
-                  <li class="star">
-                    <i class="fa-solid fa-star"></i>
-                  </li>
-                  <li class="star">
-                    <i class="fa-regular fa-star-half-stroke"></i>
-                  </li>
-                </ul>
-                <div class="price">
-                  <strong class="discount">$48.00</strong>
-                  <s class="primary-price">$165.00</s>
-                </div>
-              </div>
-              <div class="percent">-30%</div>
-              <ul class="card-elements">
-                <li class="elements">
-                  <button class="basket element">
-                    <i class="fa-solid fa-basket-shopping"></i>
-                  </button>
-                </li>
-                <li class="elements">
-                  <button class="favorite element">
-                    <i class="fa-regular fa-heart"></i>
-                  </button>
-                </li>
-                <li class="elements">
-                  <a href="" class="detail">
-                    <button class="element">
-                      <i class="fa-solid fa-eye"></i>
-                    </button>
-                  </a>
-                </li>
-                <li class="elements">
-                  <button class="share element">
-                    <i class="fa-solid fa-share-nodes"></i>
-                  </button>
-                </li>
-              </ul>
-            </li>
-            <li class="card">
-              <div class="image">
-                <img src="./assets/style/image/8p.png" class="img" alt="" />
-                <img src="./assets/style/image/9p.png" class="img2" alt="" />
-              </div>
-              <div class="card-detail">
-                <h1>Blushe Beanie</h1>
-                <ul class="stars">
-                  <li class="star">
-                    <i class="fa-solid fa-star"></i>
-                  </li>
-                  <li class="star">
-                    <i class="fa-solid fa-star"></i>
-                  </li>
-                  <li class="star">
-                    <i class="fa-solid fa-star"></i>
-                  </li>
-                  <li class="star">
-                    <i class="fa-solid fa-star"></i>
-                  </li>
-                  <li class="star">
-                    <i class="fa-regular fa-star-half-stroke"></i>
-                  </li>
-                </ul>
-                <div class="price">
-                  <strong class="discount">$38.00</strong>
-                  <s class="primary-price">$165.00</s>
-                </div>
-              </div>
-              <div class="percent">-90%</div>
-              <ul class="card-elements">
-                <li class="elements">
-                  <button class="basket element">
-                    <i class="fa-solid fa-basket-shopping"></i>
-                  </button>
-                </li>
-                <li class="elements">
-                  <button class="favorite element">
-                    <i class="fa-regular fa-heart"></i>
-                  </button>
-                </li>
-                <li class="elements">
-                  <a href="" class="detail">
-                    <button class="element">
-                      <i class="fa-solid fa-eye"></i>
-                    </button>
-                  </a>
-                </li>
-                <li class="elements">
-                  <button class="share element">
-                    <i class="fa-solid fa-share-nodes"></i>
-                  </button>
-                </li>
-              </ul>
-            </li>
-          </ul>
-          <div class="slider-button">
-            <button class="left chevron">
-              <i class="fa-solid fa-chevron-left"></i>
-            </button>
-            <button class="right chevron">
-              <i class="fa-solid fa-chevron-right"></i>
-            </button>
-          </div>
-          <div class="title">
-            <h1>FEATURED PRODUCTS</h1>
-            <p class="subtitle">Summer Collection New Morden Design</p>
-          </div>
-
-          <div class="campania-wrapper">
-            <div class="campania-first">
-              <div class="campania-item">
-                <h1>Fashion Month Ready in Capital Shop</h1>
-                <p class="subtitle">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </p>
-                <button class="campaign-click">View All</button>
-              </div>
-              <div class="campania-item">
-                <h1>Fashion Month Ready in Capital Shop</h1>
-                <p class="subtitle">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </p>
-                <button class="campaign-click">View All</button>
-              </div>
-            </div>
-          </div>
-          <div class="campania-wrapper">
-            <div class="campania-second">
-              <div class="campania-item">
-                <h1>Fashion Month Ready in Capital Shop</h1>
-                <p class="subtitle">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </p>
-                <button class="campaign-click">View All1</button>
-              </div>
-              <div class="campania-item">
-                <h1>Fashion Month Ready in Capital Shop</h1>
-                <p class="subtitle">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </p>
-                <button class="campaign-click">View All2</button>
-              </div>
-            </div>
-          </div>
-        </div>
         <div class="title">
           <h1>Blog</h1>
           <p class="subtitle">Summer Collection New Morden Design</p>
@@ -695,48 +345,48 @@
               <span class="more"><a href="">Read More</a></span>
             </div>
           </div>
-        </div>
-        <div class="brands">
-          <div class="brand">
-            <img
-              src="https://ecommarcejs.netlify.app/img/brands/brand1.png"
-              alt=""
-            />
+            <div class="blog">
+            <div class="blog-img">
+              <img
+                src="https://ecommarcejs.netlify.app/img/blogs/blog4.jpg"
+                alt=""
+              />
+            </div>
+            <div class="blog-detail">
+              <p class="date">25 Feb, 2023 - 0 Comments</p>
+              <p class="subtitle">Aliquam hendrerit mi metus</p>
+              <span class="more"><a href="">Read More</a></span>
+            </div>
           </div>
-          <div class="brand">
-            <img
-              src="https://ecommarcejs.netlify.app/img/brands/brand2.png"
-              alt=""
-            />
+           <div class="blog">
+            <div class="blog-img">
+              <img
+                src="https://ecommarcejs.netlify.app/img/blogs/blog5.jpg"
+                alt=""
+              />
+            </div>
+            <div class="blog-detail">
+              <p class="date">25 Feb, 2023 - 0 Comments</p>
+              <p class="subtitle">Aliquam hendrerit mi metus</p>
+              <span class="more"><a href="">Read More</a></span>
+            </div>
           </div>
-          <div class="brand">
-            <img
-              src="https://ecommarcejs.netlify.app/img/brands/brand3.png"
-              alt=""
-            />
-          </div>
-          <div class="brand">
-            <img
-              src="https://ecommarcejs.netlify.app/img/brands/brand4.png"
-              alt=""
-            />
-          </div>
-          <div class="brand">
-            <img
-              src="https://ecommarcejs.netlify.app/img/brands/brand5.png"
-              alt=""
-            />
+           <div class="blog">
+            <div class="blog-img">
+              <img
+                src="https://ecommarcejs.netlify.app/img/blogs/blog6.jpg"
+                alt=""
+              />
+            </div>
+            <div class="blog-detail">
+              <p class="date">25 Feb, 2023 - 0 Comments</p>
+              <p class="subtitle">Aliquam hendrerit mi metus</p>
+              <span class="more"><a href="">Read More</a></span>
+            </div>
           </div>
         </div>
       </div>
-      <div class="discount-sticker">
-        <h1>New Season Sale</h1>
-        <p class="percent">40% OFF</p>
-        <div class="line"></div>
-        <button class="shop-btn">
-          Shop Now <i class="fa-solid fa-arrow-right"></i>
-        </button>
-      </div>
+
       <div class="policy">
         <div class="container">
           <ul class="policy-list">
