--- a/shop.html
+++ b/shop.html
@@ -38,7 +38,7 @@
             <i class="fa-solid fa-bars"></i>
           </div>
 
-          <div class="header-left">LOGO</div>
+         <div class="header-left"><a href="index.html">LOGO</a></div>
 
           <nav class="center">
             <i class="fa-solid fa-chevron-left toggle"></i>
@@ -73,7 +73,7 @@
                 </div>
               </li>
               <li class="link shop-link">
-                <a href="" class="main-menu"
+                <a href="shop.html" class="main-menu"
                   >SHOP
                   <i class="fa-solid fa-chevron-down"></i>
                 </a>
@@ -158,7 +158,7 @@
                 </div>
               </li>
               <li class="link">
-                <a href="">BLOG</a>
+                <a href="blog.html">BLOG</a>
               </li>
               <li class="link">
                 <a href="">CONTACT</a>
