added contact page map

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <a href="blog.html">BLOG</a>
               </li>
               <li class="link">
-                <a href="">CONTACT</a>
+                <a href="contact.html">CONTACT</a>
               </li>
             </ul>
           </nav>
@@ -330,7 +330,7 @@
     <!-- slider end -->
 
     <!-- category,product start -->
-    <section class="category-products">
+    <section class="section">
       <div class="container">
         <div class="title">
           <h1>ALL CATEGORIES</h1>
