--- a/shop.html
+++ b/shop.html
@@ -44,7 +44,7 @@
             <i class="fa-solid fa-chevron-left toggle"></i>
             <ul class="menu">
               <li class="link">
-                <a href="" class="main-menu"
+                <a href="index.html" class="main-menu"
                   >HOME
                   <i class="fa-solid fa-chevron-down"></i>
                 </a>
@@ -161,7 +161,7 @@
                 <a href="blog.html">BLOG</a>
               </li>
               <li class="link">
-                <a href="">CONTACT</a>
+                <a href="contact.html">CONTACT</a>
               </li>
             </ul>
           </nav>
@@ -300,7 +300,7 @@
     <!-- modal search end -->
 
     <!-- category,product start -->
-    <section class="category-products">
+    <section class="section">
       <div class="container">
         <div class="title">
           <h1>ALL CATEGORIES</h1>
