--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,8 @@
             <i class="fa-solid fa-bars"></i>
           </div>
 
-          <div class="header-left"><a href="index.html">LOGO</a></div>
+          <div class="header-left"><a href="./index.html">LOGO</a></div>
+
           <nav class="center">
             <i class="fa-solid fa-chevron-left toggle"></i>
             <ul class="menu">
@@ -157,10 +158,10 @@
                 </div>
               </li>
               <li class="link">
-                <a href="">BLOG</a>
+                <a href="blog.html">BLOG</a>
               </li>
               <li class="link">
-                <a href="contact.html">CONTACT</a>
+                <a href="">CONTACT</a>
               </li>
             </ul>
           </nav>
@@ -300,93 +301,44 @@
 
     <!-- category,product start -->
     <section class="section">
-      <div class="container">
-        <div class="title">
-          <h1>Blog</h1>
-          <p class="subtitle">Summer Collection New Morden Design</p>
-        </div>
-        <div class="blogs">
-          <div class="blog">
-            <div class="blog-img">
-              <img
-                src="https://ecommarcejs.netlify.app/img/blogs/blog1.jpg"
-                alt=""
-              />
+      <div class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48332.883583529314!2d48.12556652731343!3d40.78829602355108!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4039b9f9d234761d%3A0xba134bd840fb6053!2zxLBzbWF5xLFsbMSx!5e0!3m2!1saz!2saz!4v1723830486568!5m2!1saz!2saz"
+          width="100%"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+      <div class="contact">
+        <div class="container">
+          <div class="contact-title">
+            <h4>Contact with us</h4>
+            <h2>Get In Touch</h2>
+            <div class="contact-subtitle">
+              In hac habitasse platea dictumst. Pellentesque viverra sem nec
+              orci lacinia, in bibendum urna mollis. Quisque nunc lacus, varius
+              vel leo a, pretium lobortis metus. Vivamus consectetur consequat
+              justo.
             </div>
-            <div class="blog-detail">
-              <p class="date">25 Feb, 2023 - 0 Comments</p>
-              <p class="subtitle">Aliquam hendrerit mi metus</p>
-              <span class="more"><a href="">Read More</a></span>
-            </div>
-          </div>
-          <div class="blog">
-            <div class="blog-img">
-              <img
-                src="https://ecommarcejs.netlify.app/img/blogs/blog2.jpg"
-                alt=""
-              />
-            </div>
-            <div class="blog-detail">
-              <p class="date">25 Feb, 2023 - 0 Comments</p>
-              <p class="subtitle">Aliquam hendrerit mi metus</p>
-              <span class="more"><a href="">Read More</a></span>
-            </div>
-          </div>
-          <div class="blog">
-            <div class="blog-img">
-              <img
-                src="https://ecommarcejs.netlify.app/img/blogs/blog3.jpg"
-                alt=""
-              />
-            </div>
-            <div class="blog-detail">
-              <p class="date">25 Feb, 2023 - 0 Comments</p>
-              <p class="subtitle">Aliquam hendrerit mi metus</p>
-              <span class="more"><a href="">Read More</a></span>
-            </div>
-          </div>
-            <div class="blog">
-            <div class="blog-img">
-              <img
-                src="https://ecommarcejs.netlify.app/img/blogs/blog4.jpg"
-                alt=""
-              />
-            </div>
-            <div class="blog-detail">
-              <p class="date">25 Feb, 2023 - 0 Comments</p>
-              <p class="subtitle">Aliquam hendrerit mi metus</p>
-              <span class="more"><a href="">Read More</a></span>
-            </div>
-          </div>
-           <div class="blog">
-            <div class="blog-img">
-              <img
-                src="https://ecommarcejs.netlify.app/img/blogs/blog5.jpg"
-                alt=""
-              />
-            </div>
-            <div class="blog-detail">
-              <p class="date">25 Feb, 2023 - 0 Comments</p>
-              <p class="subtitle">Aliquam hendrerit mi metus</p>
-              <span class="more"><a href="">Read More</a></span>
-            </div>
-          </div>
-           <div class="blog">
-            <div class="blog-img">
-              <img
-                src="https://ecommarcejs.netlify.app/img/blogs/blog6.jpg"
-                alt=""
-              />
-            </div>
-            <div class="blog-detail">
-              <p class="date">25 Feb, 2023 - 0 Comments</p>
-              <p class="subtitle">Aliquam hendrerit mi metus</p>
-              <span class="more"><a href="">Read More</a></span>
+            <div class="contact-wrapper">
+              <div class="contact-left">
+                <form action="" class="contact-form">
+               <div class="name-form">
+                <label for="">Your name</label>
+                <br>
+                <input type="text" required>
+               </div>
+               
+                </form>
+              </div>
+              <div class="contact-right"></div>
             </div>
           </div>
         </div>
       </div>
-
       <div class="policy">
         <div class="container">
           <ul class="policy-list">
