--- a/contact.html
+++ b/contact.html
@@ -325,16 +325,45 @@
             </div>
             <div class="contact-wrapper">
               <div class="contact-left">
-                <form action="" class="contact-form">
-               <div class="name-form">
-                <label for="">Your name</label>
-                <br>
-                <input type="text" required>
-               </div>
-               
+                <form class="form">
+                  <div class="name-email">
+                    <div class="name">
+                      <label>Your Name</label>
+                      <span>*</span>
+                      <br />
+                      <input type="text" />
+                    </div>
+                    <div class="email">
+                      <label>Your Email</label>
+                      <span>*</span>
+                      <br />
+                      <input type="text" />
+                    </div>
+                  </div>
+                  <div class="subject">
+                    <label>Your Name</label>
+                    <span>*</span>
+                    <br />
+                    <input type="text" />
+                  </div>
+                  <div class="mesagge">
+                    <label>Your Mesagge</label>
+                    <span>*</span>
+                    <br />
+                    <textarea name="" id="" size="30"></textarea>
+                  </div>
+                  <button class="msg">Send Message</button>
                 </form>
               </div>
-              <div class="contact-right"></div>
+              <div class="contact-right">
+                <h1>Clotya Store</h1>
+                <p>123 Street, Old Trafford, New South London , UK</p>
+                <p>Phone: (+800) 1234 5678 90</p>
+                <p>Email: info@example.com</p>
+                <h1 class="open">Opening Hours</h1>
+                <p>Monday - Friday : 9am - 5pm</p>
+                <p>Weekend Closed</p>
+              </div>
             </div>
           </div>
         </div>
