added account page

--- a/account.html
+++ b/account.html
@@ -38,12 +38,13 @@
             <i class="fa-solid fa-bars"></i>
           </div>
 
-          <div class="header-left"><a href="index.html">LOGO</a></div>
+          <div class="header-left"><a href="">LOGO</a></div>
+
           <nav class="center">
             <i class="fa-solid fa-chevron-left toggle"></i>
             <ul class="menu">
               <li class="link">
-                <a href="index.html" class="main-menu"
+                <a href="" class="main-menu"
                   >HOME
                   <i class="fa-solid fa-chevron-down"></i>
                 </a>
@@ -157,7 +158,7 @@
                 </div>
               </li>
               <li class="link">
-                <a href="">BLOG</a>
+                <a href="blog.html">BLOG</a>
               </li>
               <li class="link">
                 <a href="contact.html">CONTACT</a>
@@ -168,7 +169,7 @@
           <div class="header-right">
             <ul class="left-menu">
               <li>
-               <a href="account.html"><i class="fa-regular fa-user"></i></a>
+                <i class="fa-regular fa-user"></i>
               </li>
               <li><i class="fa-solid fa-magnifying-glass"></i></li>
               <li>
@@ -300,93 +301,48 @@
 
     <!-- category,product start -->
     <section class="section">
-      <div class="container">
-        <div class="title">
-          <h1>Blog</h1>
-          <p class="subtitle">Summer Collection New Morden Design</p>
-        </div>
-        <div class="blogs">
-          <div class="blog">
-            <div class="blog-img">
-              <img
-                src="https://ecommarcejs.netlify.app/img/blogs/blog1.jpg"
-                alt=""
-              />
+      <div class="account">
+        <div class="container">
+          <div class="account-wrapper">
+            <div class="login">
+              <h1>Login</h1>
+              <form action="" class="account-form">
+                <div><label for="">Username or email address</label>
+                <br />
+                <input type="email" class="input" /></div>
+                <br />
+                <label for="">Password</label>
+                <br />
+                <input type="password" class="input" />
+                <br>
+                 <input type="checkbox" class="remember" />
+                <label for="" class="text">rememeber me</label>
+                <button class="login-btn">Login</button>
+                <span><a href="">Lost your password?</a></span>
+              </form>
             </div>
-            <div class="blog-detail">
-              <p class="date">25 Feb, 2023 - 0 Comments</p>
-              <p class="subtitle">Aliquam hendrerit mi metus</p>
-              <span class="more"><a href="">Read More</a></span>
-            </div>
-          </div>
-          <div class="blog">
-            <div class="blog-img">
-              <img
-                src="https://ecommarcejs.netlify.app/img/blogs/blog2.jpg"
-                alt=""
-              />
-            </div>
-            <div class="blog-detail">
-              <p class="date">25 Feb, 2023 - 0 Comments</p>
-              <p class="subtitle">Aliquam hendrerit mi metus</p>
-              <span class="more"><a href="">Read More</a></span>
-            </div>
-          </div>
-          <div class="blog">
-            <div class="blog-img">
-              <img
-                src="https://ecommarcejs.netlify.app/img/blogs/blog3.jpg"
-                alt=""
-              />
-            </div>
-            <div class="blog-detail">
-              <p class="date">25 Feb, 2023 - 0 Comments</p>
-              <p class="subtitle">Aliquam hendrerit mi metus</p>
-              <span class="more"><a href="">Read More</a></span>
-            </div>
-          </div>
-            <div class="blog">
-            <div class="blog-img">
-              <img
-                src="https://ecommarcejs.netlify.app/img/blogs/blog4.jpg"
-                alt=""
-              />
-            </div>
-            <div class="blog-detail">
-              <p class="date">25 Feb, 2023 - 0 Comments</p>
-              <p class="subtitle">Aliquam hendrerit mi metus</p>
-              <span class="more"><a href="">Read More</a></span>
-            </div>
-          </div>
-           <div class="blog">
-            <div class="blog-img">
-              <img
-                src="https://ecommarcejs.netlify.app/img/blogs/blog5.jpg"
-                alt=""
-              />
-            </div>
-            <div class="blog-detail">
-              <p class="date">25 Feb, 2023 - 0 Comments</p>
-              <p class="subtitle">Aliquam hendrerit mi metus</p>
-              <span class="more"><a href="">Read More</a></span>
-            </div>
-          </div>
-           <div class="blog">
-            <div class="blog-img">
-              <img
-                src="https://ecommarcejs.netlify.app/img/blogs/blog6.jpg"
-                alt=""
-              />
-            </div>
-            <div class="blog-detail">
-              <p class="date">25 Feb, 2023 - 0 Comments</p>
-              <p class="subtitle">Aliquam hendrerit mi metus</p>
-              <span class="more"><a href="">Read More</a></span>
+            <div class="register">
+              <h1>Register</h1>
+              <form action="" class="account-form">
+                <div><label for="">Username or email address</label>
+                <br />
+                <input type="email" class="input" /></div>
+                <br />
+                <div><label for="">Email address</label>
+                <br />
+                <input type="email" class="input"/></div>
+                <br />
+                <label for="" >Password</label>
+                <br />
+                <input type="password" class="input"/>
+                <br>
+               <div class="note">Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our privacy policy.</div>
+                <button class="register-btn">Register</button>
+              </form>
             </div>
           </div>
         </div>
       </div>
-
       <div class="policy">
         <div class="container">
           <ul class="policy-list">
