--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <div class="header-right">
             <ul class="left-menu">
               <li>
-                <i class="fa-regular fa-user"></i>
+                <a href="account.html"><i class="fa-regular fa-user"></i></a>
               </li>
               <li><i class="fa-solid fa-magnifying-glass"></i></li>
               <li>
