--- a/shop.html
+++ b/shop.html
@@ -38,7 +38,7 @@
             <i class="fa-solid fa-bars"></i>
           </div>
 
-         <div class="header-left"><a href="index.html">LOGO</a></div>
+          <div class="header-left"><a href="index.html">LOGO</a></div>
 
           <nav class="center">
             <i class="fa-solid fa-chevron-left toggle"></i>
@@ -169,7 +169,7 @@
           <div class="header-right">
             <ul class="left-menu">
               <li>
-                <i class="fa-regular fa-user"></i>
+                <a href="account.html"><i class="fa-regular fa-user"></i></a>
               </li>
               <li><i class="fa-solid fa-magnifying-glass"></i></li>
               <li>
@@ -579,8 +579,6 @@
               <i class="fa-solid fa-chevron-right"></i>
             </button>
           </div>
-         
-          
         </div>
       </div>
       <div class="discount-sticker">
