product detail img

--- a/detail.html
+++ b/detail.html
@@ -315,6 +315,55 @@
               </ul>
             </nav>
           </div>
+          <div class="detail-wrapper">
+            <div class="product-image">
+              <img class="img" src="https://ecommarcejs.netlify.app/img/products/product2/1.png" alt="">
+              <div class="product-images">
+                <img src="https://ecommarcejs.netlify.app/img/products/product2/1.png" alt="">
+                <img src="https://ecommarcejs.netlify.app/img/products/product2/2.png" alt="">
+                <img src="https://ecommarcejs.netlify.app/img/products/product2/3.png" alt="">
+              </div>
+            </div>
+            <div class="product-detail">
+              <h1>Ridley High Waist</h1>
+             <div class="reviews">
+               <ul class="stars">
+                <li class="star">
+                  <i class="fa-solid fa-star"></i>
+                </li>
+                 <li class="star">
+                  <i class="fa-solid fa-star"></i>
+                </li>
+                 <li class="star">
+                  <i class="fa-solid fa-star"></i>
+                </li>
+                 <li class="star">
+                  <i class="fa-solid fa-star"></i>
+                </li>
+                <li class="star">
+                  <i class="fa-regular fa-star-half-stroke"></i>
+                </li>
+              </ul>
+              <span class="review">
+                2 reviews
+              </span>
+             </div>
+             <div class="product-prices">
+              <s>105.00</s>
+              <strong>124.00</strong>
+             </div>
+<div class="description">
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque magni similique dolorum modi? Non dicta, quod aperiam eveniet, nulla minus eius, cupiditate praesentium ratione officia fugiat explicabo molestias iste ipsa?
+</div>
+<div class="color">
+  <p>Color</p>
+  <div class="blue">
+    
+  </div>
+</div>
+             
+            </div>
+          </div>
         </div>
       </div>
       <div class="discount-sticker">
