--- a/account.html
+++ b/account.html
@@ -38,13 +38,13 @@
             <i class="fa-solid fa-bars"></i>
           </div>
 
-          <div class="header-left"><a href="">LOGO</a></div>
+          <div class="header-left"><a href="index.html">LOGO</a></div>
 
           <nav class="center">
             <i class="fa-solid fa-chevron-left toggle"></i>
             <ul class="menu">
               <li class="link">
-                <a href="" class="main-menu"
+                <a href="index.html" class="main-menu"
                   >HOME
                   <i class="fa-solid fa-chevron-down"></i>
                 </a>
